<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lacys</string>
    <string name="hello_world">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="home_essentials_category">Home Essentials</string>
    <string name="womens_shirts_category">Shirts</string>
    <string name="womens_pants_category">Pants</string>
    <string name="womens_skirts_category">Skirts</string>
    <string name="mens_shirts_category">Shirts</string>
    <string name="mens_pants_category">Pants</string>
    <string name="women_category">Women</string>
    <string name="men_category">Men</string>

    //login
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="attempts">Attempts Left:</string>
    <string name="CreateAccount">Create Account</string>
    <string name="NewCustomer">New Customer</string>
    <string name="confirmPassword">Confirm:</string>

    //create
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>

    //nav drawer
    <string name="title_section1">Home</string>
    <string name="title_section2">View Orders</string>
    <string name="title_section3">View Cart</string>
    <string name="title_section4">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="contact_us">Contact Us</string>
    <string name="name">Name:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="body">Body</string>
    <string name="subject">Subject:</string>
    <string name="send">Send</string>

    <string name="home">Home</string>
	
	<string name="product_view_button">OK</string>
</resources>
