<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/CreateAccount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/editTextEmail"
        android:layout_toStartOf="@+id/editTextEmail" />

    <EditText
        android:inputType="text"
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editTextConfirm"
        android:layout_toLeftOf="@+id/editTextPwd"
        android:layout_toStartOf="@+id/editTextPwd" />

    <EditText
        android:id="@+id/editTextPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="create"
        android:text="@string/CreateAccount"
        android:layout_below="@+id/editTextLname"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:text=""
        android:layout_below="@+id/textView3" />

    <EditText
        android:id="@+id/editTextConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/editTextPwd"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/editTextConfirm"
        android:layout_toStartOf="@+id/editTextConfirm" />

    <EditText
        android:inputType="text"
        android:id="@+id/editTextFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/editTextConfirm"
        android:layout_alignLeft="@+id/editTextConfirm"
        android:layout_alignStart="@+id/editTextConfirm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editTextLname"
        android:layout_toLeftOf="@+id/editTextPwd"
        android:layout_toStartOf="@+id/editTextPwd" />

    <EditText
        android:inputType="text"
        android:id="@+id/editTextLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/editTextFname"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/editTextLname"
        android:layout_toLeftOf="@+id/editTextFname"
        android:layout_toStartOf="@+id/editTextFname" />

</RelativeLayout>